// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conventional-commits updateChangelog() appends version bump message if no commits have been recorded 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.0.1"></a>
## <small>1.0.1 (YYYY-MM-DD)</small>

**Note:** Version bump only for package package-2





<a name="1.0.0"></a>

# 1.0.0 (YYYY-MM-DD)

### Features

* I should be placed in the CHANGELOG

`;

exports[`conventional-commits updateChangelog() creates files if they do not exist: leaf 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.1.0"></a>
# 1.1.0 (YYYY-MM-DD)


### Features

* I should be placed in the CHANGELOG ([SHA](https://github.com/lerna/changelog-missing/commit/SHA))

`;

exports[`conventional-commits updateChangelog() creates files if they do not exist: root 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.1.0"></a>
# 1.1.0 (YYYY-MM-DD)


### Features

* I should be placed in the CHANGELOG ([SHA](https://github.com/lerna/changelog-missing/commit/SHA))

`;

exports[`conventional-commits updateChangelog() supports old preset API 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.0.1"></a>
## <small>1.0.1 (YYYY-MM-DD)</small>
* fix(pkg1): A commit using the old preset API


<a name="1.0.0"></a>

# 1.0.0 (YYYY-MM-DD)

### Features

* I should be placed in the CHANGELOG

`;

exports[`conventional-commits updateChangelog() updates fixed changelogs: leaf 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.0.1"></a>
## [1.0.1](https://github.com/lerna/conventional-commits-fixed/compare/v1.0.0...v1.0.1) (YYYY-MM-DD)


### Bug Fixes

* A second commit for our CHANGELOG ([SHA](https://github.com/lerna/conventional-commits-fixed/commit/SHA))





<a name="1.0.0"></a>

# 1.0.0 (YYYY-MM-DD)

### Features

* I should be placed in the CHANGELOG

`;

exports[`conventional-commits updateChangelog() updates fixed changelogs: root 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.0.1"></a>
## [1.0.1](https://github.com/lerna/conventional-commits-fixed/compare/v1.0.0...v1.0.1) (YYYY-MM-DD)


### Bug Fixes

* A second commit for our CHANGELOG ([SHA](https://github.com/lerna/conventional-commits-fixed/commit/SHA))





<a name="1.0.0"></a>

# 1.0.0 (YYYY-MM-DD)

### Features

* I should be placed in the CHANGELOG

`;

exports[`conventional-commits updateChangelog() updates independent changelogs 1`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.0.1"></a>
## [1.0.1](https://github.com/lerna/conventional-commits-independent/compare/package-1@1.0.0...package-1@1.0.1) (YYYY-MM-DD)


### Bug Fixes

* **stuff:** changed ([SHA](https://github.com/lerna/conventional-commits-independent/commit/SHA))

`;

exports[`conventional-commits updateChangelog() updates independent changelogs 2`] = `
# Change Log

All notable changes to this project will be documented in this file.
See [Conventional Commits](https://conventionalcommits.org) for commit guidelines.

<a name="1.1.0"></a>
# [1.1.0](https://github.com/lerna/conventional-commits-independent/compare/package-2@1.0.0...package-2@1.1.0) (YYYY-MM-DD)


### Features

* **thing:** added ([SHA](https://github.com/lerna/conventional-commits-independent/commit/SHA))

`;
